<resources>
    <string name="app_name">POS</string>

    <string name="permission_msg">Please allow permission.</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="action_settings">Settings</string>
    <string name="permission_location_must">This Permission is required to access your phone Location.</string>
    <string name="msg_no_internet">It seems there is a low internet connectivity or no internet available, please check your internet connection and try again later.</string>
    <string name="alert_yes">YES</string>
    <string name="alert_no">NO</string>
    <string name="alert_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>

    <!--Dashboard-->
    <string name="dashboard">Dashboard</string>
    <string name="new_sale">New Sale</string>
    <string name="sales">Sales</string>
    <string name="orders">Orders</string>
    <string name="sales_summary">Sales Summary</string>
    <string name="customer">Customer</string>
    <string name="inventory">Inventory</string>
    <string name="invoice">Invoice</string>
    <string name="top_selling_products">Top Selling Products</string>
    <string name="str_add_customer">Add Customers</string>
    <string name="str_create">Create</string>
    <string name="str_website">Website</string>
    <string name="str_email">Email</string>
    <string name="str_telephone">Telephone</string>
    <string name="str_group">Group</string>
    <string name="str_industry">Industry</string>
    <string name="str_main_contact">Main Contact</string>
    <string name="str_owner_name">Owner Name</string>
    <string name="str_customer_type">Customer Type</string>
    <string name="str_foreign_name">Foreign Name</string>
    <string name="str_name">Name</string>
    <string name="str_code">Code</string>
    <string name="str_done">Done</string>
    <string name="str_select_items">Select Items</string>
    <string name="str_search">Search</string>

    <string-array name="options">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>

    //Sales Orders
    <string name="sales_orders">Sales Orders</string>
    <string name="create">Create</string>
    <string name="customer_name">Customer Name</string>
    <string name="contact_person">Contact Person</string>
    <string name="currency">Currency</string>
    <string name="sales_employee">Sales Employee</string>
    <string name="porting_date">Porting Date</string>
    <string name="delivery_date">Delivery date</string>
    <string name="document_date">Document Date</string>
    <string name="remarks">Remarks</string>
    <string name="customer_ref_no">Customer Ref No</string>
    <string name="select_items">Select Items</string>
    <string name="total_before_discount">Total Before Discount</string>
    <string name="discount">Discount %</string>
    <string name="discount_without_percent">Discount</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="rounding">Rounding</string>
    <string name="selected_items">Selected Items</string>
    <string name="discount_amount">Discount amount</string>
    <string name="select_batch">Select Batch</string>
    <string name="expiry_date">Exp Date : </string>
    <string name="sales_order">Sales Order</string>
    <string name="series">Series</string>
    <string name="business_partner">Business Partner</string>
    <string name="posting_date">Posting Date</string>
    <string name="str_items">Items</string>
    <string name="ship_to">Ship To</string>
    <string name="bill_to">Bill To</string>
    <string name="shipping_type">Shipping Type</string>
    <string name="payment_terms">Payment Terms</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="str_bp_project">BP Project</string>
    <string name="more">More</string>
    <string name="bp_project">BP Project</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="duplicate">Duplicate</string>
    <string name="copy_to_order">Copy to Order</string>
    <string name="Pdf">PDF</string>
    <string name="add_new_customer">Add new customer</string>
    <string name="save">Save</string>
    <string name="customers">Customers</string>
    <string name="ok">Ok</string>
    <string name="new_order">New Order</string>
    <string name="add">Add</string>
    <string name="applied_amount">Applied Amount</string>
    <string name="balance_due">Balance Due</string>
    <string name="click_to_view_all_items">Click to view all Items</string>
    <string name="phone">Phone</string>
    <string name="unit_price"><![CDATA[Unit Price : ]]></string>
    <string name="new_invoice">New Invoice</string>

</resources>