<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addCustomerViewModel"
            type="com.pos.ui.add_customer.AddCustomerViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/rll_parent"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/iv_drawer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:onClick="@{()->addCustomerViewModel.navigator.onBackClick()}"
                android:src="@drawable/ic_side_drawer"
                app:tint="@color/colorWhite" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/MediumTextBold"
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/customer"
                android:textColor="@color/colorWhite" />

            <LinearLayout
                android:id="@+id/ll_notification"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_notif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/ic_notifications" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/riv_profile"
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_demo_profile"
                    app:riv_oval="true" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_toolbar"
            android:paddingBottom="@dimen/_12sdp"
            android:background="@drawable/sales_order_form_bg">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/btn_save"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/_20sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/rll_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/MediumTextBold"
                            android:layout_centerVertical="true"
                            android:text="@string/add_new_customer"
                            android:textColor="@color/colorDarkBlue" />

                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/ll_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_code"
                            style="@style/TextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_code"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/str_code" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_name"
                            style="@style/TextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/str_name" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_forein_name"
                            style="@style/TextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_foreign_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/str_foreign_name" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_customer_type"
                            style="@style/TextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_customer_type"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/str_customer_type" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_owner_name"
                            style="@style/TextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_owner_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/str_owner_name" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_main_contact"
                            style="@style/TextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_main_contact"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/str_main_contact" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_industry"
                            style="@style/TextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_industry"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/str_industry" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_group"
                            style="@style/TextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_group"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/str_group" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_telephone"
                            style="@style/TextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_telephone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/str_telephone" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_email"
                            style="@style/TextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:hint="Email">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/str_email" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_website"
                            style="@style/TextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_website"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/str_website" />

                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/save"
                android:textColor="@color/colorWhite" />

        </RelativeLayout>

    </RelativeLayout>

</layout>