<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="myViewModel"
            type="com.pos.ui.sales_accounting.SalesAccountingViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/white_top_radius_bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_6sdp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="@dimen/_5sdp"
                    app:cardElevation="@dimen/_4sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:padding="@dimen/_8sdp">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/MediumTextBold"
                            android:text="@string/payment_terms"
                            android:textColor="@color/colorFullGrayDark" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_payment_terms"
                            style="@style/MediumTextBold"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:text="check payments"
                            android:textColor="@color/colorIndigoBlack" />


                        <com.google.android.material.textview.MaterialTextView
                            style="@style/MediumTextBold"
                            android:layout_marginTop="@dimen/_12sdp"
                            android:text="@string/payment_methods"
                            android:textColor="@color/colorFullGrayDark" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_payment_methods"
                            style="@style/SmallTextBold"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:text="UPI"
                            android:textColor="@color/colorIndigoBlack" />


                        <com.google.android.material.textview.MaterialTextView
                            style="@style/MediumTextBold"
                            android:layout_marginTop="@dimen/_12sdp"
                            android:onClick="@{()->myViewModel.navigator.onBottomSheetClick()}"
                            android:text="@string/bp_project"
                            android:textColor="@color/colorFullGrayDark" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_shipping_type"
                            style="@style/MediumTextBold"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:text="-----"
                            android:textColor="@color/colorIndigoBlack" />


                    </LinearLayout>


                </androidx.cardview.widget.CardView>



            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</layout>